[gd_scene load_steps=16 format=3 uid="uid://cq1wykaakktjp"]

[ext_resource type="PackedScene" uid="uid://brcqfpfn1mwrl" path="res://scenes/enemy.tscn" id="1_sg534"]
[ext_resource type="Script" path="res://scenes/enemies/laser_enemy.gd" id="2_mgvt4"]
[ext_resource type="PackedScene" uid="uid://b6avxbcyicxgg" path="res://scenes/death_effects/large_death_effect.tscn" id="3_g8sn2"]
[ext_resource type="AudioStream" uid="uid://bjil0wn43p4wo" path="res://audio/sound/hurt/enemy.ogg" id="3_sn67u"]
[ext_resource type="PackedScene" uid="uid://box3v20dnddho" path="res://scenes/debris/large_debris.tscn" id="4_jy72e"]
[ext_resource type="Texture2D" uid="uid://c1ehxfamu0fwu" path="res://sprites/laser_enemy.png" id="5"]
[ext_resource type="AudioStream" uid="uid://blrh40ileupur" path="res://audio/sound/ambient/hum.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://i1egadteuis3" path="res://audio/sound/weapons/laser.ogg" id="7"]
[ext_resource type="PackedScene" uid="uid://cugri1b6ktfy1" path="res://scenes/particles/laser_particles.tscn" id="9_pe8gd"]

[sub_resource type="CircleShape2D" id="1"]
radius = 8.0

[sub_resource type="SpriteFrames" id="SpriteFrames_s7jv7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="Curve" id="8"]
_data = [Vector2(0, 1), 0.0, -1.0, 0, 1, Vector2(1, 0), -1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="CurveTexture" id="9"]
curve = SubResource("8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nfxcr"]
spread = 180.0
initial_velocity_min = 196.0
initial_velocity_max = 256.0
gravity = Vector3(0, 0, 0)
damping_min = 256.0
damping_max = 256.0
scale_min = 8.0
scale_max = 16.0
scale_curve = SubResource("9")
color = Color(0.12549, 0.12549, 0.12549, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_b0khu"]
radius = 4.0

[node name="LaserEnemy" instance=ExtResource("1_sg534")]
script = ExtResource("2_mgvt4")
laser_damage = 8
laser_range = 1536.0
laser_shot_color = Color(1, 0, 0, 1)
laser_charge_color = Color(1, 0, 0, 0.376471)
max_health = 8
death_effect_scene = ExtResource("3_g8sn2")
debris_scene = ExtResource("4_jy72e")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("1")

[node name="AnimatedSprite2D" parent="." index="1"]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_s7jv7")

[node name="DamageParticles" parent="." index="2"]
process_material = SubResource("ParticleProcessMaterial_nfxcr")
lifetime = 0.15
preprocess = 0.05

[node name="HurtSound" parent="." index="3"]
stream = ExtResource("3_sn67u")

[node name="AmbientSound" parent="." index="4"]
stream = ExtResource("6")

[node name="ShapeCast2D" type="ShapeCast2D" parent="." index="5"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_b0khu")
collision_mask = 7

[node name="ChargeTimer" type="Timer" parent="." index="6"]
unique_name_in_owner = true
one_shot = true

[node name="CooldownTimer" type="Timer" parent="." index="7"]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="LaserParticles" parent="." index="8" instance=ExtResource("9_pe8gd")]
unique_name_in_owner = true

[node name="LaserSound" type="AudioStreamPlayer2D" parent="." index="9"]
unique_name_in_owner = true
stream = ExtResource("7")
bus = &"Sound"

[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
